--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dalle-3-app",
+  "name": "imagine",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/kv": "^1.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.312.0",
+    "nanoid": "^5.0.4",
+    "next": "14.0.3",
+    "promptmaker": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "replicate": "^0.25.2",
+    "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
