--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.1.2",
     "@vercel/kv": "^1.0.1",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
@@ -28,7 +29,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
